--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 csv = "1.3.1"
 nalgebra = "0.33.2"
+plotters = "0.3.7"
 rand = "0.9.0"
 serde = { version = "1.0.219", features = ["derive"] }
 statrs = "0.18.0"
